# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml
bookstore/: settings.py  urls.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
